--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <!-- 
     - meta tags
   -->
-  <title>Mark Wandera</title>
-  <meta name="title" content="Mark Wandera's Portfolio">
-  <meta name="description" content="This is a personal portfolio for Mark Wandera">
+  <title>Samuel Muli</title>
+  <meta name="title" content="Samuel Muli's Portfolio">
+  <meta name="description" content="This is a personal portfolio for Samuel Muli">
 
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon.png" type="image/svg+xml">
+  <link rel="shortcut icon" href="./assets/images/smmuli.jpeg" type="image/svg+xml">
 
   <!-- 
     - google font link
@@ -72,22 +72,22 @@
         <div class="container">
 
           <figure class="hero-banner img-holder" style="--width: 240; --height: 240;">
-            <img src="./assets/images/pfp.png" width="240" height="240" alt="Mark Wandera" class="img-cover">
+            <img src="./assets/images/smmuli.jpeg" width="240" height="240" alt="Samuel Muli" class="img-cover">
           </figure>
 
           <div class="hero-content">
 
-            <span class="label-large section-subtitle">UI/UX Designer | Full Stack Developer</span>
+            <span class="label-large section-subtitle">Full Stack Developer</span>
 
-            <h1 class="display-small">Mark Wandera</h1>
+            <h1 class="display-small">Samuel Muli</h1>
 
             <p class="body-large section-text">
-              Innovative UI/UX designer and Full Stack Developer creating seamless digital experiences with a passion for excellence.
+              Innovative Full Stack Developer creating seamless digital experiences with a passion for excellence.
             </p>
 
             <div class="btn-wrapper">
 
-              <a href="./assets/docs/Mark Wandera - Resume.pdf" download="Mark Wandera - Resume.pdf" class="chip">
+              <a href="./assets/docs/Samuel_Muli_-_Software_Engineer.pdf" download="Samuel_Muli_-_Software_Engineer.pdf" class="chip">
 
                 <span class="label-large">Download Resume</span>
 
@@ -121,7 +121,7 @@
           <h2 class="card-title title-medium">About</h2>
 
           <p class="body-medium card-text">
-            Innovative UI/UX designer and Full Stack Developer creating seamless digital experiences with a passion for excellence.
+            Innovative Full Stack Developer creating seamless digital experiences with a passion for excellence.
           </p>
 
           <ul class="about-list">
@@ -135,7 +135,7 @@
             <li class="list-item">
               <span class="material-symbols-outlined" aria-hidden="true"> work </span>
 
-              <span class="label-medium">IntelliSOFT Consulting Limited</span>
+              <span class="label-medium">Giktek</span>
             </li>
 
           </ul>
@@ -292,9 +292,9 @@
                 <li class="resume-item">
                   <div class="resume-card">
 
-                    <p class="body-large">Digital Health, UI/UX Designer, IntelliSOFT Consulting Limited</p>
+                    <p class="body-large">Frontend Developer, Giktek</p>
 
-                    <span class="label-medium card-subtitle">August, 2023 - Present</span>
+                    <span class="label-medium card-subtitle">February, 2024 - Present</span>
 
                     <!-- <span class="body-medium card-text">A software development and consultancy firm that specializes in Health Management Information Systems.</span> -->
 
@@ -304,9 +304,9 @@
                 <li class="resume-item">
                   <div class="resume-card">
 
-                    <p class="body-large">Volunteering UI/UX Designer, The Aquapurge Project</p>
+                    <p class="body-large">Backend Developer, Krayo Limited</p>
 
-                    <span class="label-medium card-subtitle">August, 2023 - Present</span>
+                    <span class="label-medium card-subtitle">February, 2024 - March, 2024</span>
 
                     <!-- <span class="body-medium card-text">AquaPurge is a dedicated advocate for a cleaner, more sustainable future for our oceans and the planet. </span> -->
 
@@ -316,43 +316,16 @@
                 <li class="resume-item">
                   <div class="resume-card">
 
-                    <p class="body-large">Software Engineer, 100Devs</p>
+                    <p class="body-large">Software Engineer, TipC Beverages</p>
 
-                    <span class="label-medium card-subtitle">Feb, 2023 - Present</span>
+                    <span class="label-medium card-subtitle">July, 2023 - Present</span>
 
                     <!-- <span class="body-medium card-text"> </span> -->
 
                   </div>
                 </li>
 
-                <li class="resume-item">
-                  <div class="resume-card">
-
-                    <p class="body-large">Product Designer, Where <sub>2</sub> 0</p>
-
-                    <span class="label-medium card-subtitle">June, 2023 - Present</span>
-
-                    <!-- <span class="body-medium card-text">
-                      Winner of the Acceleration Award in the UIA World Congress of Architects -
-                      Copenhagen 2023, Where 2 0 is an innovative mobile application designed to address the challenges arising from intermittent water supply and ensure improved water quality and access in Accra, Ghana.
-                    </span> -->
-
-                  </div>
-                </li>
-
-                <li class="resume-item">
-                  <div class="resume-card">
-
-                    <p class="body-large">Product Designer, Philia</p>
-
-                    <span class="label-medium card-subtitle">February, 2019 - June, 2023</span>
-
-                    <!-- <span class="body-medium card-text">
-                      A dynamic software development and consultancy firm, known for leading innovative projects for future growth.
-                    </span> -->
-
-                  </div>
-                </li>
+                
 
               </ul>
 
@@ -388,22 +361,10 @@
                   <div class="resume-card">
 
                     <p class="body-large">
-                      Uganda Advanced Certificate of Education, Namilyango College
+                      Kenya Certificate of Secondary Education, Alliance High School
                     </p>
 
-                    <span class="label-medium card-subtitle">February, 2016 - December, 2017</span>
-
-                  </div>
-                </li>
-
-                <li class="resume-item">
-                  <div class="resume-card">
-
-                    <p class="body-large">
-                      Uganda Certificate of Education, Namilyango College
-                    </p>
-
-                    <span class="label-medium card-subtitle">February, 2012 - October, 2015</span>
+                    <span class="label-medium card-subtitle">February, 2014 - December, 2017</span>
 
                   </div>
                 </li>
@@ -440,16 +401,16 @@
                 </li>
 
                 <li class="resume-bottom-item">
-                  <img src="./assets/images/figma-icon.svg" width="28" height="28" loading="lazy" alt="Figma" class="icon">
+                  <img src="./assets/images/Angular.jpeg" width="28" height="28" loading="lazy" alt="Figma" class="icon">
 
-                  <span class="label-medium">Figma</span>
+                  <span class="label-medium">Angular</span>
                 </li>
 
                 <li class="resume-bottom-item">
                   <img src="./assets/images/react.js.svg" width="28" height="28" loading="lazy" alt="React.js"
                     class="icon">
 
-                  <span class="label-medium">React.js and React Native</span>
+                  <span class="label-medium">React.js</span>
                 </li>
 
                 <li class="resume-bottom-item">
@@ -496,10 +457,10 @@
                 </li>
 
                 <li class="resume-bottom-item">
-                  <img src="./assets/images/docker-icon.svg" width="auto" height="28" loading="lazy" alt="Docker"
+                  <img src="./assets/images/postgresql.png" width="auto" height="28" loading="lazy" alt="Docker"
                     class="icon">
 
-                  <span class="label-medium">Docker</span>
+                  <span class="label-medium">PostgreSQL</span>
                 </li>
 
               </ul>
@@ -534,7 +495,7 @@
 
                       <p class="label-small info-title">Mail Me</p>
 
-                      <a href="mailto:mmwandera74@gmail.com" class="label-small info-text">mmwandera74@gmail.com</a>
+                      <a href="mailto:samuelmuli95@gmail.com" class="label-small info-text">samuelmuli95@gmail.com</a>
 
                     </div>
 
@@ -550,7 +511,7 @@
 
                       <p class="label-small info-title">Contact Me</p>
 
-                      <a href="tel:+254706899009" class="label-small info-text">+254706899009</a>
+                      <a href="tel:+254741123033" class="label-small info-text">+254741123033</a>
 
                     </div>
 
@@ -562,14 +523,14 @@
 
                 <div class="social-list">
 
-                    <a href="https://github.com/mmwandera" class="social-item">
+                    <a href="https://github.com/Samstar10" class="social-item">
                       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
                           <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"/>
                       </svg>
                   </a>
                 
 
-                  <a href="https://www.linkedin.com/in/mmwandera74/" class="social-item">
+                  <a href="https://www.linkedin.com/in/samuel-muli" class="social-item">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
                       <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
                     </svg>
@@ -585,7 +546,7 @@
 
                 <h3 class="title-large">Let’s Work Together.</h3>
 
-                <form action="https://formspree.io/f/mzbnenra"
+                <form action="https://formspree.io/f/xoqglapp"
                 method="POST" class="input-wrapper">
 
                   <input type="text" name="name" placeholder="Name*" required class="input-field">
@@ -625,7 +586,7 @@
   <footer class="footer">
     <div class="container">
 
-      <p class="body-medium">Copyright 2024. All right reserved by Mark Wandera</p>
+      <p class="body-medium">Copyright 2024. All right reserved by Samuel Muli</p>
 
     </div>
   </footer>
