Add ajali and dashboard

--- a/index.html
+++ b/index.html
@@ -186,88 +186,36 @@
                 <div class="card">
 
                   <figure class="card-banner img-holder" style="--width: 334; --height: 180;">
-                    <img src="./assets/images/cocktail-compass_thumbnail.png" alt="Cocktail Compass" width="334" height="180"
+                    <img src="./assets/images/Screenshot 2024-03-05 at 13.00.34.png" alt="Campaigns Dashboard" width="334" height="180"
                       class="img-cover">
                   </figure>
 
                   <div class="card-content">
                     <span class="label-large card-subtitle">Web App</span>
 
-                    <h3 class="title-large card-title">Cocktail Compass</h3>
+                    <h3 class="title-large card-title">Campaigns Dashboard</h3>
                   </div>
 
-                  <a href="https://mmwandera.github.io/cocktail-compass/" class="state-layer" target="_blank"></a>
+                  <a href="https://loanish.lol/dashboard" class="state-layer" target="_blank"></a>
 
                 </div>
 
                 <div class="card">
 
                   <figure class="card-banner img-holder" style="--width: 334; --height: 180;">
-                    <img src="./assets/images/humtheman_thumbnail.png" alt="Humtheman" width="334" height="180"
+                    <img src="./assets/images/Screenshot 2024-03-05 at 13.06.38.png" alt="Ajali" width="334" height="180"
                       class="img-cover">
                   </figure>
 
                   <div class="card-content">
                     <span class="label-large card-subtitle">Web App</span>
 
-                    <h3 class="title-large card-title">Humtheman</h3>
+                    <h3 class="title-large card-title">Ajali</h3>
                   </div>
 
-                  <a href="https://humtheman.onrender.com/" class="state-layer" target="_blank"></a>
+                  <a href="https://ajali.netlify.app" class="state-layer" target="_blank"></a>
 
                 </div>
-
-                <div class="card">
-
-                  <figure class="card-banner img-holder" style="--width: 334; --height: 180;">
-                    <img src="./assets/images/sonaris_thumbnail.png" alt="Sonaris" width="334"
-                      height="180" class="img-cover">
-                  </figure>
-
-                  <div class="card-content">
-                    <span class="label-large card-subtitle">Web App</span>
-
-                    <h3 class="title-large card-title">Sonaris</h3>
-                  </div>
-
-                  <a href="https://mmwandera.github.io/sonaris/" class="state-layer" target="_blank"></a>
-
-                </div>
-
-                <div class="card">
-
-                  <figure class="card-banner img-holder" style="--width: 334; --height: 180;">
-                    <img src="./assets/images/listify_thumbnail.png" alt="Listify" width="334" height="180"
-                      class="img-cover">
-                  </figure>
-
-                  <div class="card-content">
-                    <span class="label-large card-subtitle">Web App</span>
-
-                    <h3 class="title-large card-title">Listify</h3>
-                  </div>
-
-                  <a href="https://listify-x07l.onrender.com/" class="state-layer" target="_blank"></a>
-
-                </div>
-
-                <div class="card">
-
-                  <figure class="card-banner img-holder" style="--width: 334; --height: 180;">
-                    <img src="./assets/images/telly9n-movies_thumbnail.png" alt="Telly9n Movies" width="334" height="180"
-                      class="img-cover">
-                  </figure>
-
-                  <div class="card-content">
-                    <span class="label-large card-subtitle">Web App</span>
-
-                    <h3 class="title-large card-title">Telly9n Movies</h3>
-                  </div>
-
-                  <a href="https://telly9ne-movies.onrender.com/" class="state-layer" target="_blank"></a>
-
-                </div>
-
 
               </div>
 
@@ -340,7 +288,7 @@
                       Software Engineering, Moringa School
                     </p>
 
-                    <span class="label-medium card-subtitle">August, 2023 - Present</span>
+                    <span class="label-medium card-subtitle">August, 2023 - February, 2024</span>
 
                   </div>
                 </li>
