--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
   <footer class="footer">
     <div class="container">
 
-      <p class="body-medium">Copyright 2024. All right reserved by Samuel Muli</p>
+      <p class="body-medium">Copyright 2024. All rights reserved by Samuel Muli</p>
 
     </div>
   </footer>
