--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <div class="card">
 
                   <figure class="card-banner img-holder" style="--width: 334; --height: 180;">
-                    <img src="./assets/images/Screenshot 2024-03-05 at 13.06.38.png" alt="Ajali" width="334" height="180"
+                    <img src="./assets/images/Screenshot 2024-03-07 at 12.01.52.png" alt="Ajali" width="334" height="180"
                       class="img-cover">
                   </figure>
 
@@ -213,7 +213,7 @@
                     <h3 class="title-large card-title">Ajali</h3>
                   </div>
 
-                  <a href="https://ajali.netlify.app" class="state-layer" target="_blank"></a>
+                  <a href="https://samstar10.github.io/Aj-F/" class="state-layer" target="_blank"></a>
 
                 </div>
 
