--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     <h3 class="title-large card-title">Ajali</h3>
                   </div>
 
-                  <a href="https://samstar10.github.io/Aj-F/" class="state-layer" target="_blank"></a>
+                  <a href="https://ajali-f.netlify.app/" class="state-layer" target="_blank"></a>
 
                 </div>
 
