Update project link

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <h3 class="title-large card-title">Campaigns Dashboard</h3>
                   </div>
 
-                  <a href="https://loanish.lol/dashboard" class="state-layer" target="_blank"></a>
+                  <a href="https://loanish.lol/campaigns" class="state-layer" target="_blank"></a>
 
                 </div>
 
