--- a/index.html
+++ b/index.html
@@ -217,6 +217,23 @@
 
                 </div>
 
+                <div class="card">
+
+                  <figure class="card-banner img-holder" style="--width: 334; --height: 180;">
+                    <img src="./assets/images/Screenshot 2024-03-27 at 15.56.15.png" alt="Investiculate" width="334" height="180"
+                      class="img-cover">
+                  </figure>
+
+                  <div class="card-content">
+                    <span class="label-large card-subtitle">Web App</span>
+
+                    <h3 class="title-large card-title">Investiculate</h3>
+                  </div>
+
+                  <a href="https://inveculate.netlify.app/" class="state-layer" target="_blank"></a>
+
+                </div>
+
               </div>
 
             </div>
