--- a/index.html
+++ b/index.html
@@ -220,14 +220,14 @@
                 <div class="card">
 
                   <figure class="card-banner img-holder" style="--width: 334; --height: 180;">
-                    <img src="./assets/images/Screenshot 2024-03-27 at 15.56.15.png" alt="Investiculate" width="334" height="180"
+                    <img src="./assets/images/Screenshot 2024-03-27 at 15.56.15.png" alt="Inveculate" width="334" height="180"
                       class="img-cover">
                   </figure>
 
                   <div class="card-content">
                     <span class="label-large card-subtitle">Web App</span>
 
-                    <h3 class="title-large card-title">Investiculate</h3>
+                    <h3 class="title-large card-title">Inveculate</h3>
                   </div>
 
                   <a href="https://inveculate.netlify.app/" class="state-layer" target="_blank"></a>
