Add project manager app

--- a/index.html
+++ b/index.html
@@ -234,6 +234,23 @@
 
                 </div>
 
+                <div class="card">
+
+                  <figure class="card-banner img-holder" style="--width: 334; --height: 180;">
+                    <img src="./assets/images/Screenshot 2024-05-03 at 13.02.36.png" alt="simply-project" width="334" height="180"
+                      class="img-cover">
+                  </figure>
+
+                  <div class="card-content">
+                    <span class="label-large card-subtitle">Web App</span>
+
+                    <h3 class="title-large card-title">Simply-project</h3>
+                  </div>
+
+                  <a href="https://simply-project.netlify.app/" class="state-layer" target="_blank"></a>
+
+                </div>
+
               </div>
 
             </div>
