--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
             <div class="btn-wrapper">
 
-              <a href="./assets/docs/Samuel_Muli_-_Software_Engineer.pdf" download="Samuel_Muli_-_Software_Engineer.pdf" class="chip">
+              <a href="./assets/docs/Muli Resume (6).pdf" download="Samuel_Muli_-_Software_Engineer.pdf" class="chip">
 
                 <span class="label-large">Download Resume</span>
 
@@ -298,6 +298,18 @@
                 <li class="resume-item">
                   <div class="resume-card">
 
+                    <p class="body-large">Front-End Developer, Unidentified Landed Object (ULO)</p>
+
+                    <span class="label-medium card-subtitle">August, 2023 - November, 2023</span>
+
+                    <!-- <span class="body-medium card-text">AquaPurge is a dedicated advocate for a cleaner, more sustainable future for our oceans and the planet. </span> -->
+
+                  </div>
+                </li>
+
+                <li class="resume-item">
+                  <div class="resume-card">
+
                     <p class="body-large">Software Engineer, TipC Beverages</p>
 
                     <span class="label-medium card-subtitle">July, 2023 - Present</span>
@@ -396,6 +408,13 @@
                 </li>
 
                 <li class="resume-bottom-item">
+                  <img src="./assets/images/tailwind-css-icon.png" width="28" height="28" loading="lazy" alt="React.js"
+                    class="icon">
+
+                  <span class="label-medium">Tailwind CSS</span>
+                </li>
+
+                <li class="resume-bottom-item">
                   <img src="./assets/images/node.js.svg" width="28" height="28" loading="lazy" alt="Node.js"
                     class="icon">
 
@@ -443,6 +462,34 @@
                     class="icon">
 
                   <span class="label-medium">PostgreSQL</span>
+                </li>
+
+                <li class="resume-bottom-item">
+                  <img src="./assets/images/docker-icon.svg" width="auto" height="28" loading="lazy" alt="Docker"
+                    class="icon">
+
+                  <span class="label-medium">Docker</span>
+                </li>
+
+                <li class="resume-bottom-item">
+                  <img src="./assets/images/vue-js-icon.webp" width="auto" height="28" loading="lazy" alt="Docker"
+                    class="icon">
+
+                  <span class="label-medium">Vue</span>
+                </li>
+
+                <li class="resume-bottom-item">
+                  <img src="./assets/images/logo-dark.svg" width="auto" height="28" loading="lazy" alt="Docker"
+                    class="icon">
+
+                  <span class="label-medium"></span>
+                </li>
+
+                <li class="resume-bottom-item">
+                  <img src="./assets/images/fhir.png" width="auto" height="28" loading="lazy" alt="Docker"
+                    class="icon">
+
+                  <span class="label-medium">FHIR</span>
                 </li>
 
               </ul>
